# gpurec

./: .gitignore  CLAUDE.md  Hu.py  README.md  analyze_zeros.py  diagnose_convergence.py  diagnose_nan_gradients.py  diagnosis.md  fixed_point_iteration.tex  implementation_verification.md  implicit_differentiation.md  instructions.md  likelihood_analysis.tex  likelihood_optimization_summary.md  log_space_improvements.md  log_space_optimization_results.json  matmul_ale.py  matmul_ale_ccp.py  matmul_ale_ccp_log.py  matmul_ale_ccp_optimize_correct.py  matmul_ale_ccp_optimize_finite_diff.py  matmul_ale_ccp_optimize_log_proper.py  matmul_ale_ccp_optimize_simple.py  matmul_ale_ccp_optimize_single_iter.py  project_state.md  prompt.md  pyproject.toml  pytest.ini  reorganize.patch  run_alerax.md  single_iter_optimization_final_summary.md  single_iter_optimization_results.json  single_iter_optimization_results_summary.md  test.ipynb  test_finite_differences.py  test_parallel_zeros.py  test_zero_positions_consistency.py  test_zero_values_linear.py
bazar/: Pi_update_ccp_log_no_compile.py  analyze_topological_constraints.py  benchmark_ccp.py  benchmark_ccp_log.py  benchmark_compile_modes.py  benchmark_cudagraph_modes.py  benchmark_log_detailed.py  benchmark_maxautotune_static.py  benchmark_small.py  benchmark_summary.md  benchmark_torch_compile.py  compare_zero_patterns.py  complete_newton_test.py  comprehensive_analysis_large_trees.json  comprehensive_analysis_small_trees.json  comprehensive_optimization_analysis.py  context.md  convergence_summary.md  debug_branch14.py  debug_ccp.py  (+74 more)
(+414 files in other folders)
